# eggypegpy

./: README.md  setup.cfg
src/eggypegpy/: functions.py  test_functions.py
