[metadata]
name = eggypegpy
version = 0.0.1
author = Jared Dunn
author_email = jdunn510@gmail.com
description = A library to convert English to Eggy Peggy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaredmdunn/eggypegpy


[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src